--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
         "strict": true,
         "esModuleInterop": true,
         "declaration": true,
-        "emitDeclarationOnly": false
+        "emitDeclarationOnly": false,
+        "allowSyntheticDefaultImports": true
     },
     "include": [
         "src/**/*.ts"
     ],
     "exclude": [
-        "node_modules"
-    ]
+        "node_modules",
+      ]
 }
